--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
+nav {
+  display: flex;
+  justify-content: space-between;
+  background-color: #585858;
+}
+
+nav p {
+  font-size: 1.5rem;
+  color: #fff;
+  margin: 1% 2%;
+}
+
+.link-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 20%;
+}
+
+.link-wrapper a {
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: #fff;
+  padding: 1% 5%;
+  margin: 1% 4%;
+}
+
+.link-wrapper a:hover {
+  color: #dddddd;
+  border-bottom: 2px solid #af0000;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 550px;
+  background-image: url(https://www.alfaforni.com/wp-content/uploads/2018/08/pizza-come-in-pizzeria.jpg);
+  background-repeat: none;
+  background-size: cover;
+  background-position: bottom;
+}
+
+.hero h1 {
+  font-size: 3.5rem;
+}
+
+.order-header {
+  display: flex;
+  justify-content: center;
+  margin: 2% 0;
+}
+
+.order-header h2 {
+  font-size: 2.5rem;
+  font-weight: 300;
+}
+
+.form-group {
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 2% 3%;
+  -webkit-box-shadow: 0px 0px 30px 7px rgba(0,0,0,0.5); 
+  box-shadow: 0px 0px 30px 7px rgba(0,0,0,0.5);
+  border-radius: 7px;
+  background-color: #d8bfbf;
+  margin-bottom: 5%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.errors {
+  color: #af0000;
+  margin-bottom: 1.5%;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label {
+  margin: 1% 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input, select {
+  width: 100%;
+  font-size: 1.1rem;
+}
+
+.ordered-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
+}
+
+.order-container {
+  width: 50%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  border: 1px solid #9c9c9c;
+  padding: 2% 3%;
 }
